# TxFeeMaximizer

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  cbindgen.toml  justfile
include/: tx_fee_maximizer.h
src/: algo.rs  c.rs  lib.rs
test_data/: initial_balance.csv  negative_balance_illegal.csv  rich_a_poor_bcd.csv
test_data/cases/: long_chain_01.csv  tx_competition_01.csv  tx_competition_02.csv  tx_dependency_01.csv  tx_dependency_02.csv
tests/: test_algo.rs  test_constraints.rs
tests/c/: c_link_error_str.c  c_link_test.c  test_utils.h
