[package]
name = "tx-fee-maximizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "lib"]

[[bin]]
name = "fee-maximizer"
path = "bin/main.rs"
required-features = ["clap"]

[dependencies]
csv = "1.2.2"
fastrand = "1.9.0"
lazy_static = "1.4.0"
libc = "0.2.144"
rayon = "1.7.0"
serde = { version="1.0.163", features=["derive"] }
clap = { version="4.3.2", optional=true, features=["derive"] }

[dev-dependencies]
serde_json = "1.0.63"
